
gbsplay HISTORY


2024/01/25  -  0.0.95
~~~~~~~~~~~~~~~~~~~~~

(entries marked with (*) are present in version 0.0.95 but were
 missing in the HISTORY file released with version 0.0.95)

Bugfixes:

- gbsplay:
  - fix octaves in note display during playback
  - fix segfaults on status display for files other than .gbs
  - don't set up the terminal if stdout is redirected
  - fix duplicate handling of keystrokes
  - dsound plugout:
    - fix buffer handling (fixes choppy and too fast playback)
  - MIDI plugouts:
    - fix notes getting out of sync from accumulated rounding errors
    - fix 'sound off' (NR52) to affect all channels instead of channel 2 only
    - fix octaves of exported notes (not perfect since wave data on channel 3
      could contain repetitions resulting in higher octaves)
  - stdout plugout:
    - fix newline conversion of binary data on MINGW

- gbs core:
  - fix envelope volume in channel retrigger
  - fix off-by-one error in gbhw_io_peek (fixes verbose WAVE display)
  - fix sign extension bug in byte swapping (fixes endian change via -E)
  - fix small memory leak from impulse buffer
  - fix missing sound with ROMs using ugetab's VBlank timing
  - fix hex dump endianess in debug output
  - fix possible duplicate free() on zlib compressed data
  - always use 64 bits for cycle counter (fixes overflow issues on MINGW32)
  - free ROM buffer on exit

- libgbs:
  - install libgbs.h alongside the shared library to make it usable

- build process:
  - don't run depend.sh before config.mk is included
  - only enable i18n if it really works
  - only build with -fstack-* protections if they really work
  - fix Windows builds on MSYS2, MINGW32 and MINGW64
  - fix library path detection on macOS
  - fix SDL2 detection
  - (*) fix dist target in Makefile

- documentation:
  - fix typos in manpage

Removals:

- gbsplay:
  - remove unmaintained splint annotations
  - remove regparm optimizations