@@ -1,0 +1,58 @@
+# This workflow will build and test gbsplay in various configurations on FreeBSD.
+
+name: FreeBSD Build
+
+on:
+  push:
+  pull_request:
+    types: [opened]
+  schedule:
+    - cron: '13 4 5 * *'
+
+jobs:
+  build-windows:
+    name: Build and test on FreeBSD
+
+    runs-on: ${{ matrix.os.host }}
+
+    strategy:
+      matrix:
+        os:
+          - name: freebsd
+            architecture: x86-64
+            version: '13.2'
+            host: macos-12
+          - name: freebsd
+            architecture: arm64
+            version: '13.2'
+            host: ubuntu-latest
+        flags: ['', '--enable-sharedlibgbs']
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install dependencies, build and test under ${{ matrix.os.name }}
+        uses: cross-platform-actions/action@v0.22.0
+        env:
+          CONFIGURE_FLAGS: ${{ matrix.flags }} --enable-verbosebuild
+          CFLAGS: -Wformat -Werror=format-security -Wall -pedantic
+        with:
+          operating_system: ${{ matrix.os.name }}
+          architecture: ${{ matrix.os.architecture }}
+          version: ${{ matrix.os.version }}
+          shell: bash
+          memory: 5G
+          cpu_count: 4
+          run: |
+            yes | sudo pkg install gmake
+            gmake
+            ./check_plugout_wav.sh
+      - name: Check activated plugouts
+        run: |
+          ./check_plugouts.sh devdsp wav
+      - name: Check build flags
+        run: |
+          ./check_buildflags.sh ${{ matrix.flags }} --enable-verbosebuild
+      - name: Dump configure on error
+        if: ${{ failure() }}
+        run: |
+          bash -x -v configure && cat config.err
